examples/logic.java
public class logic {
  public static void main(String[] args) {
    //Question 1:
    int a = 102 / 4;
    System.out.println(a);   //25

    //Question 2:
    String b = "hi" - "i";
    System.out.println(b);  //error

    //Question 3:
    double c = 9 * 3;
    System.out.println(c);  //27

    //Question 4
    boolean coach = true;
    boolean mentor = false;
    System.out.println(coach && mentor);  // false
    System.out.println(coach || mentor);  // true

    //Question 5
    int f = 5 - 2 * 3;
    System.out.println(f);  //-1

  }
}
